chức năng check giúp đánh nhãn nhanh hơn

--- a/resources/strings/strings-ja-JP.properties
+++ b/resources/strings/strings-ja-JP.properties
@@ -46,6 +46,7 @@ zoomin=拡大
 zoomout=縮小
 useDefaultLabel=指定されたラベル名を使う
 # Thinkman edit here
+useCheck=Bật mode check
 staffSecurity=Chọn loại nhân viên
 gender=Chọn giới tính
 age=Chọn tuổi
