--- a/resources/strings/strings-zh-CN.properties
+++ b/resources/strings/strings-zh-CN.properties
@@ -73,7 +73,8 @@ gender=Chọn giới tính
 age=Chọn tuổi
 qa=Chọn chất lượng của detection
 # Thinkman edit here
-useDifficult=有难度的
+# useDifficult=有难度的
+useCheck=有难度的
 boxLabelText=区块的标签
 labels=标签
 autoSaveMode=自动保存模式
