--- a/resources/strings/strings-zh-TW.properties
+++ b/resources/strings/strings-zh-TW.properties
@@ -70,7 +70,8 @@ gender=Chọn giới tính
 age=Chọn tuổi
 qa=Chọn chất lượng của detection
 # Thinkman edit here
-useDifficult=有難度的
+# useDifficult=有難度的
+useCheck=有難度的
 boxLabelText=區塊的標籤
 labels=標籤
 autoSaveMode=自動儲存模式
