--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -73,7 +73,8 @@ gender=Chọn giới tính
 age=Chọn tuổi
 qa=Chọn chất lượng của detection
 # Thinkman edit here
-useDifficult=difficult
+# useDifficult=difficult
+useCheck=Bật mode check
 boxLabelText=Box Labels
 labels=Labels
 autoSaveMode=Auto Save mode
